upload lai file

--- a/ogani-master/ogani-master/admin/home.html
+++ b/ogani-master/ogani-master/admin/home.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Trang chủ</a></li>
                 <li><a href="#">Người dùng</a></li>
                 <li><a href="#">Danh mục</a></li>
-                <li><a id="product-table" onclick="product()">Sản phẩm</a></li>
+                <li><a href="product/product.html">Sản phẩm</a></li>
                 <li><a href="#">Bài viết</a></li>
                 <li><a href="#">Đơn hàng</a></li>
                 <li><a href="#">Cài đặt</a></li>
