--- a/ogani-master/ogani-master/shop-grid.html
+++ b/ogani-master/ogani-master/shop-grid.html
@@ -536,11 +536,11 @@
                            
                         </div>
                     </div>
-                    <div id="paginationContainer" class="product__pagination">
-                        <a href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                        <a href="#"><i class="fa fa-long-arrow-right"></i></a>
+                    <div class="product__pagination">
+                        <!-- <a href="#"></a> -->
+                        <!-- <a href="#">2</a>
+                        <a href="#">3</a> -->
+                        <!-- <a href="#"><i class="fa fa-long-arrow-right"></i></a> -->
                     </div>
                 </div>
             </div>
