--- a/ogani-master/ogani-master/admin/product/product.html
+++ b/ogani-master/ogani-master/admin/product/product.html
@@ -1,18 +1,34 @@
-<link rel="stylesheet" type="text/css" href="style.css">
 <div class="search-container">
     <input type="text" id="search-input" placeholder="Tìm kiếm...">
     <button id="search-button">Tìm kiếm</button>
+    <button id="add-button" onclick="toggleForm()">Thêm</button>
 </div>
-<table id="product-table">
+<form id="product-form" style="display: none;">
+    <label for="product-code">Mã sản phẩm:</label>
+    <input type="text" id="product-code">
+  
+    <label for="product-name">Tên sản phẩm:</label>
+    <input type="text" id="product-name">
+  
+    <label for="product-image">Hình ảnh:</label>
+    <input type="file" id="product-image">
+  
+    <label for="product-description">Nội dung:</label>
+    <textarea id="product-description"></textarea>
+  
+    <button type="submit">Thêm sản phẩm</button>
+  </form>
+<table id="product-table1">
     <thead>
         <tr>
-            <th>ID</th>
-            <th>Tên sản phẩm</th>
-            <th>Giá</th>
-            <th>Hành động</th>
+            <th style="width: 50px;">ID</th>
+            <th style="width: 200px;">Tên sản phẩm</th>
+            <th style="width: 200px; height: 150px;">Hình ảnh</th>
+            <th style="width: 100px;">Giá</th>
+            <th >Hành động</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="product-table">
         <!-- Dữ liệu sản phẩm sẽ được thêm vào đây bằng JavaScript -->
     </tbody>
 </table>
@@ -21,8 +37,5 @@
     <span id="current-page">1</span>
     <button id="next-button">Trang sau</button>
 </div>
-<div class="actions">
-    <button id="add-button">Thêm</button>
-    <button id="edit-button">Sửa</button>
-    <button id="delete-button">Xóa</button>
-</div>
+<script src="/admin/productAdmin.js"></script>
+<script src="/admin/product/formproduct.js"></script>
