--- a/ogani-master/ogani-master/admin/product/product.html
+++ b/ogani-master/ogani-master/admin/product/product.html
@@ -12,11 +12,20 @@
   
     <label for="product-image">Hình ảnh:</label>
     <input type="file" id="product-image">
-  
+
+    <label for="product-price">Gía:</label>
+    <input type="text" id="product-price">
+
+    <label for="product-quantily">Số lượng</label>
+    <input type="text" id="product-quantily">
+
     <label for="product-description">Nội dung:</label>
     <textarea id="product-description"></textarea>
-  
-    <button type="submit">Thêm sản phẩm</button>
+
+    <label for="product-category">Danh mục</label>
+    <select id="category">
+      </select>  
+    <button id="button-btn" type="submit">Thêm sản phẩm</button>
   </form>
 <table id="product-table1">
     <thead>
