--- a/ogani-master/ogani-master/blog.html
+++ b/ogani-master/ogani-master/blog.html
@@ -312,11 +312,11 @@
                             
                         </div>
                         <div class="col-lg-12">
-                            <div class="product__pagination blog__pagination">
-                                <a href="#">1</a>
-                                <a href="#">2</a>
-                                <a href="#">3</a>
-                                <a href="#"><i class="fa fa-long-arrow-right"></i></a>
+                            <div class="product__pagination blog__pagination" id="pagination-container">
+                                <!-- <a href="#"  class="pagination-link">1</a>
+                                <a href="#"  class="pagination-link">2</a>
+                                <a href="#"  class="pagination-link">3</a>
+                                <a href="#"  class="pagination-link" id="next-page"><i class="fa fa-long-arrow-right"></i></a> -->
                             </div>
                         </div>
                     </div>
