--- a/ogani-master/ogani-master/shop-grid.html
+++ b/ogani-master/ogani-master/shop-grid.html
@@ -327,16 +327,18 @@
                                 <h4>Latest Products</h4>
                                 <div class="latest-product__slider owl-carousel">
                                     <div class="latest-prdouct__slider__item">
-                                        <a href="#" class="latest-product__item">
-                                            <div class="latest-product__item__pic">
-                                                <img src="img/latest-product/lp-1.jpg" alt="">
-                                            </div>
-                                            <div class="latest-product__item__text">
-                                                <h6>Crab Pool Security</h6>
-                                                <span>$30.00</span>
-                                            </div>
-                                        </a>
-                                        <a href="#" class="latest-product__item">
+                                        <div id="latest-product">
+                                            <a href="#" class="latest-product__item">
+                                                <div class="latest-product__item__pic">
+                                                    <img src="img/latest-product/lp-1.jpg" alt="">
+                                                </div>
+                                                <div class="latest-product__item__text">
+                                                    <h6>Crab Pool Security</h6>
+                                                    <span>$30.00</span>
+                                                </div>
+                                            </a> 
+                                        </div>
+                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
                                                 <img src="img/latest-product/lp-2.jpg" alt="">
                                             </div>
@@ -382,7 +384,7 @@
                                                 <h6>Crab Pool Security</h6>
                                                 <span>$30.00</span>
                                             </div>
-                                        </a>
+                                        </a> 
                                     </div>
                                 </div>
                             </div>
@@ -412,9 +414,9 @@
                                             <h5><a href="#">Raisin’n’nuts</a></h5>
                                             <div class="product__item__price">$30.00 <span>$36.00</span></div>
                                         </div>
-                                    </div>
+                                    </div> 
                                 </div>
-                                <div class="col-lg-4">
+                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
                                             data-setbg="img/product/discount/pd-2.jpg">
@@ -536,8 +538,8 @@
                            
                         </div>
                     </div>
-                    <div class="product__pagination">
-                        <!-- <a href=""></a> -->
+                    <div class="product__pagination" id="paging">
+                        
                     </div>
                 </div>
             </div>
