--- a/ogani-master/ogani-master/index.html
+++ b/ogani-master/ogani-master/index.html
@@ -53,7 +53,7 @@
                 </ul>
             </div>
             <div class="header__top__right__auth">
-                <a href="./login.html"><i class="fa fa-user"></i> Login</a>
+                <a href="./login.html"><i class="fa fa-user">Login</i></a>
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
@@ -119,7 +119,6 @@
                                 </ul>
                             </div>
                             <div class="header__top__right__auth">
-                                <div id="user"></div>
                                 <a href="./login.html"><i class="fa fa-user"></i> Login</a>
                             </div>
                         </div>
@@ -156,7 +155,7 @@
                     <div class="header__cart">
                         <ul>
                             <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                            <li><a href="#" id="unpaid"></a></li>
                         </ul>
                         <div class="header__cart__price">item: <span>$150.00</span></div>
                     </div>
@@ -189,7 +188,8 @@
                             <form action="#">
                                 <div class="hero__search__categories">
                                     All Categories
-                                    <span class="arrow_carrot-down"></span>
+                                    <span class="arrow_carrot-down">
+                                    </span>
                                 </div>
                                 <input type="text" placeholder="What do yo u need?">
                                 <button type="submit" class="site-btn">SEARCH</button>
@@ -392,7 +392,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <!-- <div class="latest-prdouct__slider__item">
+                            <div class="latest-prdouct__slider__item">
                                 <a href="#" class="latest-product__item">
                                     <div class="latest-product__item__pic">
                                         <img src="img/latest-product/lp-1.jpg" alt="">
@@ -420,7 +420,7 @@
                                         <span>$30.00</span>
                                     </div>
                                 </a>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -528,6 +528,7 @@
     <script src="js/category.js"></script>
     <script src="js/product.js"></script>
     <script src="js/bloghome.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
