--- a/ogani-master/ogani-master/login.html
+++ b/ogani-master/ogani-master/login.html
@@ -6,16 +6,18 @@
 <body>
   <div class="container">
     <h2>Đăng nhập</h2>
-    <form action="">
+    <form id="login-form">
       <div class="form-group">
         <label for="username">Tên đăng nhập:</label>
         <input type="text" id="username" name="username" placeholder="Nhập tên đăng nhập">
+        <!-- <div id="name" style="color: red; display: none;"></div> -->
       </div>
       <div class="form-group">
         <label for="password">Mật khẩu:</label>
         <input type="password" id="password" name="password" placeholder="Nhập mật khẩu">
+        <!-- <div id="pass" style="color: red;display: none;"></div> -->
       </div>
-      <input type="submit" onclick="signin()" value="Đăng nhập">
+      <button onclick="signin()">Đăng nhập</button>
       <input type="button" value="Đăng ký" onclick="location.href='register.html';">
     </form>
   </div>
