--- a/ogani-master/ogani-master/shoping-cart.html
+++ b/ogani-master/ogani-master/shoping-cart.html
@@ -265,7 +265,7 @@
                 <div class="col-lg-12">
                     <div class="shoping__cart__btns">
                         <a id="my-link" href="#" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
-                        <a href="#" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
+                        <a href="#" id="updateCart" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
                             Upadate Cart</a>
                     </div>
                 </div>
